--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,3 +1,17 @@
-<head>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title><%= title %></title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+  </head>
+  <body>
     <h1><%= title %></h1>
-</head>
+    
+    <p>Welcome to <%= title %></p>
+
+
+    <p>Sign in</p>
+    
+
+  </body>
+</html>
