--- a/views/profrate.ejs
+++ b/views/profrate.ejs
@@ -1,3 +1,21 @@
-<head>
+<%- include partial/head.ejs %>
+
+<%- include partial/main_nav.ejs %>
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <title><%= title %></title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+  </head>
+  <body>
     <h1><%= title %></h1>
-</head>
+    
+    <p>Welcome to <%= title %></p>
+
+
+    <p>Prof Rate</p>
+    
+
+  </body>
+</html>
