--- a/views/partial/main_nav.ejs
+++ b/views/partial/main_nav.ejs
@@ -50,8 +50,8 @@
             <li class="nav-item"><a href="/logout" class="nav-link">
               <i class="fas fa-lg fa-sign-out-alt"></i> Logout</a></li>
           <% } else { %>
-            <li class="nav-item"><a href="/login" class="nav-link">
-              <i class="fas fa-lg fa-sign-in-alt"></i> Login</a></li>
+            <li class="nav-item"><a href="/sign_in" class="nav-link">
+              <i class="fas fa-lg fa-sign-in-alt"></i> Sign in</a></li>
           <% } %>
   
 
