--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,3 +1,9 @@
+<%- include partial/head.ejs %>
+
+<%- include partial/main_nav.ejs %>
+
+
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -15,3 +21,7 @@
 
   </body>
 </html>
+
+<%- include partial/bottom_nav.ejs %>  
+
+<%- include partial/footer.ejs %>
