--- a/views/settings/settings.ejs
+++ b/views/settings/settings.ejs
@@ -1,12 +1,11 @@
-<%- include partial/head.ejs %>
-
-<%- include partial/main_nav.ejs %>
-
+<!--
+  
+-->
 
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title><%- title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
@@ -17,6 +16,5 @@
 
     <p>Settings</p>
     
-
   </body>
 </html>
