--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title><%- title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
