--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,8 +1,6 @@
-<%- include partial/head.ejs %>
+  <%- include partial/head.ejs %>
 
-<%- include partial/main_nav.ejs %>
-
-
+  <%- include partial/main_nav.ejs %>
 
 <!DOCTYPE html>
 <html>
@@ -17,7 +15,7 @@
 
 
     <p>Sign in</p>
-    
+    <a href="/settings">Settings</a>
 
   </body>
 </html>
