"(Mandeep Kaur changes #1)"

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,21 +2,23 @@
 
 <%- include partial/main_nav.ejs %>
 
-
+<!--
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    
-    <p>Welcome to <%= title %></p>
+  -->
 
-
-    <p>About</p>
-    
+    <!--main content-->
+    <main class="container">
+      <div class="jumbotron">
+        <h1 class="display-4">Welcome to <%= title %></h1>
+        <link rel='stylesheet' href='/stylesheets/style.css'>
+      </div>
+    </main>
 
   </body>
 </html>
