--- a/views/partial/main_nav.ejs
+++ b/views/partial/main_nav.ejs
@@ -1,11 +1,10 @@
 <!-- Main Navigation -->
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">
-      <img src="" alt="Logo" class="image1">
-    </a>
+    <a class="navbar-brand" href="/"></a>
+    <img src="/images/logo.jpg" alt="logo" class="image1" width="100px" height="80px" style="float:left">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon"></span>Test
     </button>
   
    
@@ -54,4 +53,4 @@
               <i class="fas fa-lg fa-sign-in-alt"></i> Sign in</a></li>
           <% } %>
     </div>
-  </nav>
+</nav>
