--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,23 +3,15 @@
 <%- include partial/main_nav.ejs %>
 
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%- title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
+<!--main content-->
+<main class="container">
+  <div class="jumbotron">
     
-    <p>Welcome to <%= title %></p>
+    <link rel='stylesheet' href='/stylesheets/style.css'>
+    <h1 class="display-4">Welcome to <%= title %></h1>
+  </div>
+</main>
 
-
-    <p>Welcome to <%= title %></p>
-    
-
-  </body>
-</html>
 
 <%- include partial/bottom_nav.ejs %>  
 
