--- a/views/settings/settings.ejs
+++ b/views/settings/settings.ejs
@@ -1,12 +1,9 @@
-<!--
-  
--->
-
 <!DOCTYPE html>
 <html>
   <head>
     <title><%- title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="icon" href="/images/feedback.png">
   </head>
   <body>
     <h1><%= title %></h1>
@@ -15,6 +12,11 @@
 
 
     <p>Settings</p>
+
+    <p>Change Username</p>
+    <p>Change Password</p>
+
+    <button><a href="/account">Cancel</a></button>
     
   </body>
 </html>
