--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -13,10 +13,12 @@
     
     <p>Welcome to <%= title %></p>
 
-
-    <p>Sign in</p>
-    <a href="/settings">Settings</a>
-
+    <label>Username:</label>
+    <br>
+    <label>Password:</label>
+    <br>
+    <button><a href="/account">Log in</a></button>
+    <button><a href="/signup">Sign up</a></button>
   </body>
 </html>
 
