--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-inverse navbar-fixed-bottom">
     <div class="container">
-      <h4  class="navbar-text">Group Project</h4>
+      <h4  class="navbar-text"></h4>
     </div>
   </nav>
   
