--- a/views/partial/main_nav.ejs
+++ b/views/partial/main_nav.ejs
@@ -1,11 +1,14 @@
 <!-- Main Navigation -->
+<head>
+  <!--Icon for browser's tab-->
+  <link rel="icon" href="/images/feedback.png">
+</head>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/"></a>
     <img src="/images/logo.jpg" alt="logo" class="image1" width="100px" height="80px" style="float:left">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>Test
-    </button>
+    <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
+      <span class="navbar-toggler-icon"></span>
   
    
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -42,7 +45,6 @@
         <% } %>
           <a class="nav-link" href="/about"><i class="fas fa-cogs"></i> About Services </a>
         </li>
-
 
         <% if(typeof displayName == 'string' && displayName) { %>
             <li class="navbar-text"><i class="fas fa-lg fa-user"></i> Welcome, <%= displayName %></li>
