--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,3 +1,55 @@
-<head>
-    <h1><%= title %></h1>
-</head>
+<%- include ../partials/header.ejs %>
+
+<%- include ../partials/main_nav.ejs %>
+
+
+<main class="container">
+
+   
+
+    <div class="row">
+        <div class="offset-md-4 col-md-4">
+            <h1>Login Here</h1>
+            <form method="POST" autocomplete="off">
+                <fieldset class="form-group">
+                    <label for="username">Username: </label>
+                    <input type="text" class="form-control" placeholder="Enter Username" id="username" required autofocus>
+
+                
+                </fieldset>
+
+                <fieldset class="form-group">
+                    <label for="password">Password: </label>
+                    <input type="password" class="form-control" name="password" placeholder="Enter Password" id="password" required>
+                    or
+                    <a href="/views/signup/signup.ejs">Sign Up Here</a>
+                    
+                </fieldset>
+
+                <fieldset class="form-group text-right">
+                    <input type="submit" class="btn btn-success" value="Login">
+                    <a href="/">
+                        <input type="button" class="btn btn-warning" value="Cancel">    
+                    </a>
+
+                    
+                    
+                </fieldset>
+            
+            
+            </form>
+            
+        </div>
+        
+    </div>
+
+
+</main>
+
+<%- include ../partials/bottom_nav.ejs %>  
+
+<%- include ../partials/footer.ejs %>
+
+
+
+
