Some UI changes/visual

--- a/views/studfeeds.ejs
+++ b/views/studfeeds.ejs
@@ -7,6 +7,10 @@
 <html>
   <head>
     <title><%= title %></title>
+
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed" rel="stylesheet">
+
     <link rel='stylesheet' href='/stylesheets/style.css' />
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -26,6 +30,12 @@
 
 
     <p>Feedback</p>
+
+
+
+
+
+
     <div class="main-section">
       <div class="hedding-title"><h1>Star Rating System</h1></div>
       <div class="rating-part">
@@ -76,13 +86,16 @@
       <i aria-hidden="true" class="fa fa-star-o"></i>
       <i aria-hidden="true" class="fa fa-star-o"></i>
       <span>10%</span>
+      
+
+      
       </div>
       <div style="clear: both;"></div>
       <div class="reviews"><h1>Reviews</h1></div>
       <div class="comment-part">
       <div class="user-img-part">
       <div class="user-img">
-      <img src="/demo/man01.png">
+      <img src="/images/peron.png">
       </div>
       <div class="user-text">
       <h4>8 days ago</h4>
@@ -106,7 +119,7 @@
       <div class="comment-part">
       <div class="user-img-part">
       <div class="user-img">
-      <img src="/demo/man02.png">
+      <img src="/images/peron.png">
       </div>
       <div class="user-text">
       <h4>30 days ago</h4>
@@ -130,7 +143,7 @@
       <div class="comment-part">
       <div class="user-img-part">
       <div class="user-img">
-      <img src="/demo/man03.png">
+      <img src="/images/peron.png">
       </div>
       <div class="user-text">
       <h4>1 days ago</h4>
@@ -154,7 +167,7 @@
       <div class="comment-part">
       <div class="user-img-part">
       <div class="user-img">
-      <img src="/demo/man04.png">
+      <img src="/images/peron.png">
       </div>
       <div class="user-text">
       <h4>24 days ago</h4>
@@ -180,7 +193,6 @@
   
 <style>
  body{
-
 font-family: 'Barlow Semi Condensed', sans-serif;
 }
 .main-section{
@@ -190,6 +202,7 @@ margin: 0 auto;
 padding: 10px;
 margin-top:50px;
 box-shadow:0px 2px 7px 1px #aa9191;
+border-radius: 25px;
 }
 .hedding-title h1{
 margin:0px;
