--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -23,13 +23,20 @@
     <h1><%= title %></h1>
     
     <p>Welcome to <%= title %></p>
-
-    <label>Username:</label>
-    <br>
-    <label>Password:</label>
-    <br>
-    <button><a href="/account">Log in</a></button>
-    <button><a href="/signup">Sign up</a></button>
+    <div>
+      <form method="post" autocomplete="off">
+        <label>Username:</label>
+        <input type="text" id="uemail" placeholder="Enter email" name="email" required>
+        <br>
+        <label>Password:</label>
+        <input type="text" placeholder="Enter password" id="upass" name="password" required>
+        <br>
+        <button type="submit">Log in</a></button>
+        </form>
+    </div>
+    <div>
+      <button><a href="/signup">Sign up</a></button>
+    </div>
   </body>
 </html>
 
