--- a/views/signup/signup.ejs
+++ b/views/signup/signup.ejs
@@ -8,10 +8,11 @@
     
     <p>Welcome to <%= title %></p>
 
-    <p>First Name:</p>
-    <p>Last Name:</p>
-    <p>Email:</p>
-    <p>Password:</p>
+    <p>First Name: <input type="text" id="uemail" placeholder="Enter email" name="email" required> </p>
+    <p>Last Name: <input type="text" id="uemail" placeholder="Enter email" name="email" required> </p>
+    <p>Email: <input type="text" id="uemail" placeholder="Enter email" name="email" required> </p>
+    <p>Password: <input type="text" placeholder="Enter password" id="upass" name="password" required> </p>
+
     
     <button><a>Submit</a></button>
     <button><a href="/sign_in">Cancel</a></button>
