--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -21,18 +21,18 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    
     <p>Welcome to <%= title %></p>
+    
     <div>
-      <form method="post" autocomplete="off">
-        <label>Username:</label>
-        <input type="text" id="uemail" placeholder="Enter email" name="email" required>
+      <form method="POST" autocomplete="off">
+        <label>Email:</label>
+        <input type="text" id="uemail" placeholder="Enter email" name="Email" required>
         <br>
         <label>Password:</label>
-        <input type="text" placeholder="Enter password" id="upass" name="password" required>
+        <input type="text" placeholder="Enter password" id="upass" name="Password" required>
         <br>
-        <button type="submit">Log in</a></button>
-        </form>
+        <input type="submit" value="Login">
+      </form>
     </div>
     <div>
       <button><a href="/signup">Sign up</a></button>
