--- a/views/signup/signup.ejs
+++ b/views/signup/signup.ejs
@@ -8,13 +8,23 @@
     
     <p>Welcome to <%= title %></p>
 
-    <p>First Name:</p>
-    <p>Last Name:</p>
-    <p>Email:</p>
-    <p>Password:</p>
-    
-    <button><a>Submit</a></button>
-    <button><a href="/sign_in">Cancel</a></button>
-
+    <h1>Fill the fields</h1>
+    <form method="POST" autocomplete="off">
+      <label for="username">Username:</label>
+      <input type="text" id="username" placeholder="Enter username" name="username" required>
+      <br>
+      <label for="password">Password:</label>
+      <input type="password" placeholder="Enter password" id="password" name="password" required>
+      <br>
+      <label for="email">Email: </label>
+      <input type="email" name="email" id="email" placeholder="Enter Email Address" required>
+      <br>
+      <label for="displayName">Display Name:</label>
+      <input type="text" name="displayName" placeholder="Enter Display Name" id="displayName" required>
+      <br>
+      <input type="submit" class="button-24" value="Sign up">
+    </form>
+    <!--<button><a href="/sign_in">Cancel</a></button>
+    -->
   </body>
 </html>
