--- a/views/signup/signup.ejs
+++ b/views/signup/signup.ejs
@@ -8,14 +8,27 @@
     
     <p>Welcome to <%= title %></p>
 
-    <p>First Name: <input type="text" id="uemail" placeholder="Enter email" name="email" required> </p>
-    <p>Last Name: <input type="text" id="uemail" placeholder="Enter email" name="email" required> </p>
-    <p>Email: <input type="text" id="uemail" placeholder="Enter email" name="email" required> </p>
-    <p>Password: <input type="text" placeholder="Enter password" id="upass" name="password" required> </p>
-
-    
-    <button><a>Submit</a></button>
-    <button><a href="/sign_in">Cancel</a></button>
-
+    <form method="POST" autocomplete="off">
+      <label for="username">Username:</label>
+      <input type="text" id="username" placeholder="Enter username" name="username" required>
+      <br>
+      <br>
+      <label for="password">Password:</label>
+      <input type="password" placeholder="Enter password" id="password" name="password" required>
+      <br>
+      <br>
+      <label for="email">Email: </label>
+      <input type="email" name="email" id="email" placeholder="Enter Email Address" required>
+      <br>
+      <br>
+      <label for="displayName">Display Name:</label>
+      <input type="text" name="displayName" placeholder="Enter Display Name" id="displayName" required>
+      <br>
+      <br>
+      <input type="submit" class="button-24" value="Submit">
+    </form>
+    <div>
+      <button><a href="/sign_in">Cancel</a></button>
+    </div>
   </body>
 </html>
