Big reorganization of the structure features #9

--- a/views/signup/signup.ejs
+++ b/views/signup/signup.ejs
@@ -26,9 +26,7 @@
       <br>
       <br>
       <input type="submit" class="button-24" value="Submit">
+      <a href="/sign_in"><input type="button" value="Cancel"></a>
     </form>
-    <div>
-      <button><a href="/sign_in">Cancel</a></button>
-    </div>
   </body>
 </html>
