--- a/views/account/account.ejs
+++ b/views/account/account.ejs
@@ -1,3 +1,7 @@
+<%- include ../partial/head.ejs %>
+
+<%- include ../partial/main_nav.ejs %>
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -8,12 +12,41 @@
   <body>
     <h1><%= title %></h1>
     
+    
+    <div> logged in user:<%= displayName %></div>
+    
+  <% if(typeof displayName == 'string' && displayName) {%>
     <p>Welcome to <%= title %></p>
     <p>FORM FOR FEEDBACK</p>
-    <button><a>Submit Feedback</a></button>
-
-    <button><a href="/settings">Settings</a></button>
+  <div>
+    <form method="POST" autocomplete="off">
+        <label for="fname">Your First name: </label>
+        <input type="text" id="fname" placeholder="First name" name="fname" required>
+        <br>
+        <br>
+        <label for="lname">Your Last name: </label>
+        <input type="text" id="lname" placeholder="Last name" name="lname" required>
+        <br>
+        <br>
+        <label for="feedback">Your feedback: </label>
+        <input type="text" id="feedback" placeholder="Enter your feedback" name="feedback" required>
+        <br>
+        <br>
+        <label for="stars">Stars:</label>
+        <input type="number" placeholder="Enter password" id="stars" name="stars" required>
+        <br>
+        <br>
+        <input type="submit" class="button-24" value="Submit Feedback">
+        <a href="/settings"><!---->
+          <input type="button" class="button-24" value="Settings">
+        </a>
+    </form>
+  </div>
     <button><a href="/sign_in">Log Out</a></button>
-
+    <% } else { %>
+      <div>Please register or sign in</div>
+      <% } %>
   </body>
 </html>
+
+<%- include ../partial/bottom_nav.ejs %>  
