Major UI improvements on Forms and Titles

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -22,13 +22,23 @@
   </head>
   <body>
   
+    <h1><%= title %></h1>
 
-    <!--main content-->
-    <main class="container">
-      <div class="jumbotron">
-        <h1 class="display-4">Welcome to <%= title %></h1>
-        <link rel='stylesheet' href='/stylesheets/style.css'>
-      </div>
-    </main>
+    
+      
+    <style>
+h1{
+  color: white;
+  text-align: center;
+}
+
+
+    </style> 
+
+
+
+
+    </body>
+    </html>
 
   
