--- a/views/profrate.ejs
+++ b/views/profrate.ejs
@@ -13,7 +13,6 @@
   <body>
     <h1><%= title %></h1>
     
-    <p>Welcome to <%= title %></p>
 
 
     
@@ -151,8 +150,14 @@
   border-radius: 25px;
   width: 500px;
   padding-left: 125px;
+  margin-top:50px;
+
 }
 
+h1{
+  color: white;
+  text-align: center;
+}
   .rating {
   display: inline-block;
   position: relative;
