--- a/views/studfeeds.ejs
+++ b/views/studfeeds.ejs
@@ -27,8 +27,7 @@
 
 
 
-
-    <table class="table table-bordered table-striped table-hover">
+    <table class="table table-striped table-hover rounded-circle">
       <!-- Header Row-->
       <tr class="d-flex">
           <th class="text-center col-3">Professor</th>
@@ -36,6 +35,7 @@
           <th class="text-center col-5">Comments</th>
           <th class="text-center col-1">Price</th>
       </tr>
+      
 
       <!-- Repeatable Template Row -->
 
@@ -47,8 +47,15 @@
 <style>
 
 .d-flex{
-  width: 100%;
-}  
+  border-radius: 25px;
+  overflow: hidden;
+  margin-top:20px;
+
+}
+h1{
+  color: white;
+  text-align: center;
+}
 
 
 
