fixed "logout" for account.ejs

--- a/views/account/account.ejs
+++ b/views/account/account.ejs
@@ -63,7 +63,7 @@
         </a>
     </form>
   
-    <button class="button-24"><a href="/sign_in">Log Out</a></button>
+    <button class="button-24"><a href="/logout">Log Out</a></button>
     <% } else { %>
       <div class="warning">Please register or sign in!</div>
       <% } %>
