--- a/views/signup/signup.ejs
+++ b/views/signup/signup.ejs
@@ -27,7 +27,7 @@
       <br>
       <br>
       <input type="submit" class="button-24" value="Submit">
-      <a href="/sign_in"><input type="button" value="Cancel"></a>
+      <a href="/sign_in"><input type="button" class="button-24" value="Cancel"></a>
     </form>
 </div>
 
@@ -54,6 +54,45 @@ input {
   float: left;
 }
 
+.button-24 {
+  background: black;
+  border: 1px solid #ffffff;
+  border-radius: 4.5px;
+  box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+  font-size: 12px;
+  font-weight: 60000;
+  line-height: 12px;
+  min-height: 30px;
+  outline: 0;
+  padding: 6px 7px;
+  text-align: center;
+  text-rendering: geometricprecision;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+}
+
+.button-24:hover,
+.button-24:active {
+  background-color: initial;
+  background-position: 0 0;
+  color: #000000;
+  text-decoration: none;
+
+}
+
+.button-24:active {
+  opacity: .5;
+  text-decoration: none;
+
+}
 </style>
 
 
