little change student's feedback

--- a/views/studfeeds.ejs
+++ b/views/studfeeds.ejs
@@ -31,9 +31,9 @@
       <!-- Header Row-->
       <tr class="d-flex">
           <th class="text-center col-3">Professor</th>
-          <th class="text-center col-3">Overall Rating</th>
-          <th class="text-center col-5">Comments</th>
-          <th class="text-center col-1">Price</th>
+          <th class="text-center col-3">Student</th>
+          <th class="text-center col-5">Student's feedback</th>
+          <th class="text-center col-1">Star</th>
       </tr>
       
 
