--- a/views/studfeeds.ejs
+++ b/views/studfeeds.ejs
@@ -11,6 +11,9 @@
 
     <link rel='stylesheet' href='/stylesheets/style.css' />
 
+    <!--For feedbacks table style-->
+    <link rel='stylesheet' href='/stylesheets/studfeeds.css' />
+
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -24,9 +27,6 @@
   <body>
     <h1><%= title %></h1>
     
-
-
-
     <table class="table table-striped table-hover rounded-circle">
       <!-- Header Row-->
       <tr class="d-flex">
@@ -42,6 +42,36 @@
 
   </table>
 
+<!--//////////////////////////////////////////////////// Retrieving Students Feedbacks-->
+  <div id="servcont">
+    <div id="dexper">
+        <h1 id="hexper">Feedbacks:</h1>
+    </div>
+    <div id="inserv">
+     <table class="mtable">
+         <thead>
+             <tr>
+                 <th>FirstName</th>
+                 <th>LastName</th>
+                 <th>Feedback</th>
+                 <th>Stars</th>
+                 <th>Comments</th>
+             </tr>
+         </thead>
+             <tbody>
+                 <% for (let count = 0; count < Feedbacks.length; count++) { %>
+                     <tr>
+                        <td><%= Feedbacks[count].FirstName %></td>
+                        <td><%= Feedbacks[count].LastName %></td>
+                        <td><%= Feedbacks[count].Stars %></td>
+                        <td><%= Feedbacks[count].Comments %></td>
+                     </tr>
+                 <% } %>
+             </tbody>
+        </table>
+    </div>
+</div>   
+<!--////////////////////////////////////////////////////-->
 
 
 <style>
