--- a/views/studfeeds.ejs
+++ b/views/studfeeds.ejs
@@ -63,6 +63,7 @@
                      <tr>
                         <td><%= Feedbacks[count].FirstName %></td>
                         <td><%= Feedbacks[count].LastName %></td>
+                        <td><%= Feedbacks[count].Feedback %></td>
                         <td><%= Feedbacks[count].Stars %></td>
                         <td><%= Feedbacks[count].Comments %></td>
                      </tr>
