Quick Fixes Broken Navigation-2

--- a/views/partial/main_nav.ejs
+++ b/views/partial/main_nav.ejs
@@ -19,7 +19,7 @@
         <% } else  { %>
         <li class="nav-item">
         <% } %>
-          <a class="nav-link" href="/home"><i class="fas fa-lg fa-laptop-house"></i> Home Page </a>
+          <a class="nav-link" href="/"><i class="fas fa-lg fa-laptop-house"></i> Home Page </a>
         </li>
 
         <% if (title == "Student's Feedbacks") { %>
