Updated About Us

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -25,8 +25,24 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+  <h1>About Us </h1>
+    <div class="container">
+    
+     <br>
+    <h5> 
+
+      Over the past 50 years, Centennial College has transformed itself 
+      from a local community college to a worldly institution, with a 
+      presence in countries like China, India, South Korea and Brazil. <br><br>
+      No matter who you are, or where you’re from, your journey to success can start here.
+
+      We believe a Centennial education is an education without borders. We’ve re-created our College, giving ourselves a unique position in the marketplace and the world. <br> <br> We are now prepared for the next set of challenges:  be more innovative and entrepreneurial, to further exploit the benefits of technology, to creatively e
+      ngage our employees, to build more bridges with communities and employers, and to see our graduates do meaningful work and have meaningful lives.
+
+
+    </h5>
   
-    <h1><%= title %></h1>
+   
 
     
       
@@ -34,6 +50,26 @@
 h1{
   color: white;
   text-align: center;
+}
+
+p {
+    color: black;
+    
+    text-align:justify;
+   
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+   }
+
+   .container{
+  background-color: #fff;
+  height: 330px;
+  border-radius: 20px;
+  width: 500px;
+  padding-left: 50px;
+  padding-right: 50px;
+  margin-top: 50px;
+
 }
 
 
