--- a/views/profrate.ejs
+++ b/views/profrate.ejs
@@ -35,6 +35,24 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
+
+
+<div class="container-fluid">
+     <table class="table table-hover rounded-circle ">
+             <tr class="d-flex">
+                 <th class="text-center col-3">First Name</th>
+                 <th class="text-center col-3">Last Name</th>
+                 <th class="text-center col-2">Feedback</th>
+                 <th class="text-center col-1">Stars</th>
+                 <th class="text-center col-3">Comments</th>
+             </tr>
+             
+        </table>
+  </div>
+
+
+
+
 <div class="float-container">
   <div class="name">
 <h3>Rate the Professor</h3>
@@ -166,7 +184,7 @@
     <br>
     <br>
     <label for="Comments">Comments: </label>
-    <textarea id="Comments" placeholder="Enter your comments" name="v" required></textarea>
+    <textarea id="Comments" placeholder="Enter your cZomments" name="v" required></textarea>
     <br>
     <br>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="submit" class="button-24" value="Submit">
@@ -223,8 +241,9 @@
   background-color: #fff;
   border-radius: 25px;
   width: 500px;
+  margin-top:50px;
   margin-left: 430px;
-  height: 500px;
+  height: 450px;
 
 }
 
@@ -233,6 +252,7 @@
     width: 50%;
     float: left;
     padding: 20px;
+    border: 2px solid red;
     background-color: #fff;
     border-radius: 25px;
 
